<resources>
    <string name="app_name">Time2RaiseCustomer</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="events">events</string>
    <string name="orders">orders</string>
    <string name="add_photo">Add your photo</string>
    <string name="your_name">Your name</string>
    <string name="first_name">First name</string>
    <string name="your_last_name">Your last name</string>
    <string name="last_name">Last name</string>
    <string name="your_email">Your email</string>
    <string name="email">Email</string>
    <string name="your_phone">Your phone</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="verify_phone">VERIFY PHONE NUMBER</string>
    <string name="we_will_send">We will send your verification code</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="ex">x</string>
    <string name="send_verification_code">Send verification code</string>
    <string name="your_mobile_number">Your mobile number</string>
    <string name="verification_code">VERIFICATION CODE</string>
    <string name="type_verification_code">Please type, verification code sent to NUMBER</string>
    <string name="enter_your_code">Enter your code</string>
    <string name="send_again">Send again</string>
    <string name="green">#008000</string>
    <string name="error_number_phone">Please enter another number</string>
    <string name="wrong_code">Wrong code!</string>
    <string name="ongoing_orders">Ongoing orders</string>
    <string name="past_orders">Past orders</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="events_big">Events</string>
    <string name="event_name">Event name</string>
    <string name="time">time</string>
    <string name="date">date</string>
    <string name="detail">datail</string>
    <string name="free_food">Free food</string>
    <string name="organizer">Organizer</string>
    <string name="name_organizer">Name organizer</string>
    <string name="organizer_address">Organizer address</string>
    <string name="view_profile">View profile</string>
    <string name="restaurant">Restaurant</string>
    <string name="name_restaurant">Name restaurant</string>
    <string name="restaurant_address">Restaurant address</string>
    <string name="about_event">About event</string>
    <string name="place_and_order">Place and order</string>
    <string name="profile_view">Profille view</string>
    <string name="name">name</string>
    <string name="address">address</string>
    <string name="about_us">About us</string>
    <string name="call">Call</string>
    <string name="send_message">Send message</string>
    <string name="contact_us">Contact us</string>
    <string name="last_seen">last seen</string>
    <string name="order_id">Order id: -</string>
    <string name="total">Total: -</string>
    <string name="cancel_order">Cancel order</string>
    <string name="track_order">Track Order</string>
    <string name="full_menu">Full Menu</string>
    <string name="side_or_appetizers">Side or appetizers</string>
    <string name="main_dishes">Main Dishes or Entrees</string>
    <string name="salads">Salads</string>
    <string name="soups">Soups</string>
    <string name="calzones">Calzones</string>
    <string name="dessert_or_sweets">Dessert or Sweets</string>
    <string name="sips_or_beverages">Sips or Beverages</string>
    <string name="breakfast">Breakfast</string>
    <string name="deals">Deals</string>
    <string name="chef_special">Chef special</string>
    <string name="logout">Logout</string>
    <string name="error_first_name">Fill in the field.</string>
    <string name="food_name">Food name</string>
    <string name="name_food">Food name</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="add_to_order">Add to Order</string>
    <string name="search">Search</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_by_zip_code">Search by zip code</string>
</resources>
