<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".VerifyPhoneNumber">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:rowCount="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="30"
            android:background="@drawable/orange_gradient">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/icon_verify"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_verify"
                    android:layout_centerVertical="true" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/icon_verify"
                    android:orientation="vertical"
                    android:layout_centerVertical="true">
                    <TextView
                        android:id="@+id/text_verify_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/verify_phone"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:fontFamily="@font/roboto_medium"
                        android:layout_marginStart="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/we_will_send"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:layout_marginStart="15dp"/>
                </LinearLayout>

            </RelativeLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_rowWeight="45">

            <EditText
                android:id="@+id/selected_phone_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="300dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/orange"
                android:layout_marginTop="40dp"
                android:inputType="phone"
                android:enabled="false"
                android:gravity="center">

            </EditText>

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/orange"
                android:layout_marginTop="20dp"
                android:inputType="phone"
                android:maxLines="1"
                android:gravity="center"
                android:hint="@string/your_mobile_number"
                android:textColorHint="@color/hint_color" />

            <Button
                android:id="@+id/send_verification_code"
                android:layout_width="350dp"
                android:layout_height="43dp"
                android:background="@drawable/profile_save_button_background"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:text="@string/send_verification_code"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"/>
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_row="2"
            android:stretchColumns="*">

            <TableRow
                android:orientation="horizontal">
                <Button
                    android:id="@+id/number_one"
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"
                    android:layout_marginEnd="1dp"
                    android:text="@string/one"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    />

                <Button
                    android:text="@string/two"
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"
                    android:layout_marginStart="1dp"
                    android:text="@string/three"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

            </TableRow>
            <TableRow>
                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"
                    android:layout_marginEnd="1dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/four"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:text="@string/five"
                    android:background="@drawable/digits_background_4"
                    android:layout_marginTop="1dp"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/six"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>
            </TableRow>

            <TableRow>
                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"
                    android:layout_marginEnd="1dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/seven"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"

                    android:layout_marginTop="1dp"
                    android:text="@string/eight"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/nine"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>
            </TableRow>

            <TableRow>
                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@color/white"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"

                    android:layout_marginTop="1dp"
                    android:text="@string/zero"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:drawableStart="@drawable/ic_delete"
                    android:gravity="center_vertical|center"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:paddingStart="55dp"
                    android:paddingEnd="0dp"
                    android:textColor="@color/white"/>
            </TableRow>


        </TableLayout>

    </GridLayout>

</android.support.constraint.ConstraintLayout>