<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".VerificationCode">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:rowCount="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_rowWeight="30"
            android:background="@drawable/orange_gradient">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verification_code"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:layout_width="230dp"
                    android:lineSpacingExtra="5dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/type_verification_code"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginTop="15dp"/>
            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_rowWeight="45">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_code"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="@color/profile_text_color_black"
                android:layout_marginTop="50dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/first_number_of_code"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:background="@drawable/enter_code_background"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/profile_text_color_black"
                    android:maxLength="1"
                    android:nextFocusLeft="@id/second_number_of_code"/>

                <EditText
                    android:id="@+id/second_number_of_code"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:background="@drawable/enter_code_background"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/profile_text_color_black"
                    android:layout_marginStart="20dp"
                    android:maxLength="1"/>

                <EditText
                    android:id="@+id/third_number_of_code"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:background="@drawable/enter_code_background"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/profile_text_color_black"
                    android:layout_marginStart="20dp"
                    android:maxLength="1"/>

                <EditText
                    android:id="@+id/fourth_number_of_code"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:background="@drawable/enter_code_background"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/profile_text_color_black"
                    android:layout_marginStart="20dp"
                    android:maxLength="1"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_again"
                android:layout_gravity="center_horizontal"
                android:textSize="14sp"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginTop="30dp"
                android:textColor="@color/orange"/>


        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_row="2"
            android:stretchColumns="*">

            <TableRow
                android:orientation="horizontal">
                <Button
                    android:id="@+id/number_one"
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"
                    android:layout_marginEnd="1dp"
                    android:text="@string/one"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    />

                <Button
                    android:text="@string/two"
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"
                    android:layout_marginStart="1dp"
                    android:text="@string/three"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

            </TableRow>
            <TableRow>
                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"
                    android:layout_marginEnd="1dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/four"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:text="@string/five"
                    android:background="@drawable/digits_background_4"
                    android:layout_marginTop="1dp"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/six"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>
            </TableRow>

            <TableRow>
                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"
                    android:layout_marginEnd="1dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/seven"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"

                    android:layout_marginTop="1dp"
                    android:text="@string/eight"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:text="@string/nine"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>
            </TableRow>

            <TableRow>
                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@color/white"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"

                    android:layout_marginTop="1dp"
                    android:text="@string/zero"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:textColor="@color/white"/>

                <Button
                    android:layout_height="@dimen/buttons_height"
                    android:background="@drawable/digits_background_4"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:drawableStart="@drawable/ic_delete"
                    android:gravity="center_vertical|center"
                    android:textSize="@dimen/buttons_text_size"
                    android:textAllCaps="false"
                    android:paddingStart="55dp"
                    android:paddingEnd="0dp"
                    android:textColor="@color/white"/>
            </TableRow>


        </TableLayout>

    </GridLayout>
</android.support.constraint.ConstraintLayout>